--- a/K8S-Production/Deployment.yaml
+++ b/K8S-Production/Deployment.yaml
@@ -18,7 +18,7 @@ spec:
       name: amazon-prime
     spec:
       containers:
-        - image: kanha05/amazon-prime:15
+        - image: subrotosharma/amazon-prime:01
           name: prime-container
           ports:
             - containerPort: 3000
