--- a/K8S-Production/Deployment.yaml
+++ b/K8S-Production/Deployment.yaml
@@ -1,24 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app: prime-app
-    app.kubernetes.io/instance: amazon-prime
   name: amazon-prime
   namespace: default
+  labels:
+    app: prime-app
 spec:
-  replicas: 2
   selector:
     matchLabels:
       app: prime-app
+  replicas: 2
   template:
     metadata:
+      name: amazon-prime
       labels:
         app: prime-app
-      name: amazon-prime
     spec:
       containers:
-        - image: subrotosharma/amazon-prime:01
-          name: prime-container
-          ports:
-            - containerPort: 3000
+      - name: prime-container
+        image: subrotosharma/amazon-prime:3
+        ports:
+        - containerPort: 3000
